--- a/src/blog.scss
+++ b/src/blog.scss
@@ -40,6 +40,7 @@ $errorColor: #ff6666;
 }
 .body-font {
   font-family: 'Merriweather', Helvetica, Arial, sans-serif;
+  font-weight: 300;
   line-height: 1.45;
 }
 
@@ -75,10 +76,10 @@ $errorColor: #ff6666;
 // ----------------------------------------------------------
 
 html {
-  font-size: 20px;
+  font-size: 16px;
 
   @media screen and (max-width: 600px) {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
@@ -92,20 +93,20 @@ body {
 }
 
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: 1.5em !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
   @extend .heading-font;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.8em;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 3.157rem;
+  font-size: 2.2rem;
 }
 
-h2 {font-size: 2.369rem;}
+h2 {font-size: 1.9rem;}
 
 h3 {font-size: 1.777rem;}
 
@@ -792,6 +793,12 @@ main > section.archive {
     margin-right: .5rem;
   }
 
+}
+
+.posthaven-post-body {
+  span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
+    font-weight: 300;
+  }
 }
 
 .posthaven-private-form {
