--- a/snippets/post.liquid
+++ b/snippets/post.liquid
@@ -22,7 +22,11 @@
   </header>
 
   <div class="body">
-    {{ post.body }}
+    {% if post.url.current_page? %}
+      {{ post.body }}
+    {% else %}
+      {{ post.excerpt_or_body }}
+    {% endif %}
   </div>
 
   {% unless post.url.current_page? %}
