Fix typo preventing footer tags section from being hidden when empty.

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -62,7 +62,7 @@
         {% endfor %}
       {% endunless %}
 
-      {% unless site.tags == emtpy %}
+      {% unless site.tags == empty %}
         <div>
           <h5>Tags</h5>
           <ul>
